Updated home.html to support template inheritance

--- a/DixieClassifieds/DixieClassifieds/DixieClassifieds/Classifieds/templates/home.html
+++ b/DixieClassifieds/DixieClassifieds/DixieClassifieds/Classifieds/templates/home.html
@@ -1,9 +1,7 @@
-<html>
-<head><title></title></head>
 
-<body>
+{% extends "base.html" %}
 
-{{ content }}
-
-</body>
-</html>
+{% block content %}
+  <h2>Content for Classifieds</h2>  
+  <p>Stuff etc etc.</p>
+{% endblock %}
